[tool.poetry]
name = "vger"
version = "0.2.6"
description = "An execution framework for Jupyter environments."
authors = ["Joseph Lucas <joe@joetl.com>"]
license = "GPL-3.0-only"
readme = "README.md"

packages = [
    { include = "vger" }
]

[tool.poetry.scripts]
vger = 'vger.application:app'

[tool.poetry.dependencies]
python = "^3.10"
inquirer = "^3.2"
rich = "^13.7"
urllib3 = "^2.1"
websockets = "^12.0"
requests = "^2.30"
typer = {extras = ["all"], version = "^0.9.0"}
pyds-sum = { version = "*", optional = true }
pytest = "^8.3.5"

[tool.poetry.extras]
ai = ["pyds-sum"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
twine = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
